# kanvas-rs

./: Cargo.toml  README.md  README.org
res/models/: cube.mtl  plane.blend  plane.mtl  scene.blend  scene.blend1  scene.mtl  table.blend  table.blend1  table.mtl
res/shaders/: billboard.frag  billboard.vert  debug.frag  light.vert  shader.frag  shader.vert  shadow.frag  shadow.vert
src/: billboard.rs  camera.rs  camera2.rs  debug.frag  debug.rs  debug_depth.frag  debug_depth.vert  forward.rs  geometry.rs  lib.rs  light.rs  main.rs  math.rs  model.rs  pipeline.rs  shader.frag  shader.rs  shader.vert  shadow.frag  shadow.rs  shadow.vert  texture.rs  ui.rs  uniform.rs
